# productshotai-site-kit

./: .gitignore  .npmignore  .pubignore  CHANGELOG.md  Cargo.toml  Dockerfile  MANIFEST  ProductShotAISiteKit.podspec  README.md  composer.json  go.mod  index.js  jsr.json  mix.exs  mod.ts  mod_test.ts  package.json  pom.xml  productshotai-site-kit-0.1.0-1.rockspec  productshotai-site-kit.cabal  productshotai-site-kit.gemspec  productshotaisitekit.go  productshotaisitekit_test.go  publish-record.csv  publish-record.json  publish-record.md  pubspec.yaml  pyproject.toml  test.js  test_lua.lua  test_python.py  test_ruby.rb
.github/workflows/: cocoapods-publish.yml  publish-cocoapods.yml
Sources/ProductShotAISiteKit/: SiteKit.swift
ansible_collections/baiwei/productshotai/: LICENSE  README.md  galaxy.yml
ansible_collections/baiwei/productshotai/examples/: workspace.yml
charts/productshotai-asset-gateway/: Chart.yaml  README.md  artifacthub-repo.yml  values.yaml
charts/productshotai-asset-gateway/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
chocolatey/: productshotai-site-kit.nuspec
chocolatey/tools/: productshotai-site-kit.psm1
conda-forge/: README.md
conda-forge/recipe/: meta.yaml
docker/asset-gateway/: Dockerfile  package.json  server.js  test.js
docs/: conditional-platform-attempt-plan.md  conditional-platform-prep-status.md
lib/: productshotai_site_kit.dart  productshotai_site_kit.ex  productshotai_site_kit.rb
lua/: productshotai_site_kit.lua
nuget/ProductShotAI.SiteKit/: ProductShotAI.SiteKit.csproj  SiteKit.cs
open-vsx/: .vscodeignore  README.md  extension.js  package.json  test.js
packaging/aur/: .SRCINFO  PKGBUILD
packaging/homebrew/Formula/: productshotai-site-kit.rb
productshotai_site_kit/: __init__.py  cli.py
r/productshotaiR/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r/productshotaiR/R/: prompt_sheet.R  urls.R
r/productshotaiR/man/: make_prompt_sheet.Rd  normalize_image_manifest.Rd  normalize_product_metadata.Rd  productshotai_prompt_sheet.Rd  productshotai_url.Rd  productshotai_urls.Rd  write_prompt_template.Rd
r/productshotaiR/tests/: testthat.R
src/: SiteKit.php  lib.rs
src-hs/ProductShotAI/: SiteKit.hs
terraform/cloudflare-productshotai-assets/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
test/: productshotai_site_kit_test.dart  productshotai_site_kit_test.exs
test-hs/: Main.hs
tests/: test_cli.py  test_platform_artifacts.py
wordpress/baiwei-content-links-productshot-ai/: LICENSE  baiwei-content-links-productshot-ai.php  readme.txt
wordpress/productshotai-site-kit/: LICENSE  productshotai-site-kit.php  readme.txt
(+11 files in other folders)
