cabal-version:      3.0
name:               productshotai-site-kit
version:            0.1.0
synopsis:           URL helpers and metadata utilities for ProductShot AI
description:        A tiny Haskell helper for ProductShot AI canonical URLs and public page links.
homepage:           https://productshotai.app
bug-reports:        https://github.com/bbwdadfg/productshotai-site-kit/issues
license:            MIT
license-file:       LICENSE
author:             ProductShot AI
maintainer:         support@productshotai.app
category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/bbwdadfg/productshotai-site-kit

library
  exposed-modules: ProductShotAI.SiteKit
  hs-source-dirs: src-hs
  build-depends: base >=4.14 && <5
  default-language: Haskell2010

test-suite productshotai-site-kit-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-hs
  build-depends: base >=4.14 && <5, productshotai-site-kit
  default-language: Haskell2010
